--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 @import url('./brand.css');
 @import url('./actions.css');
 @import url('./contacts.css');
+@import url('./about.css');
 
 /* HEADER START */
 
