--- a/css/media.css
+++ b/css/media.css
@@ -126,6 +126,9 @@
         color: var(--main-blue);
         transform: scale(1.08);
     }
+    main.about .info {
+        padding-bottom: 20px;
+    }
 }
 
 @media (max-width: 1400px) {
@@ -433,9 +436,66 @@
     .product-box .product-card__counter .plus {
         padding: 0 20px 0 20px;
     }
+    .swiper.swiper-about-promo {
+        max-width: 450px;
+        height: 300px;
+    }
+    .about-promo__inner {
+        gap: 25px;
+    }
+    .about-promo__tagline {
+        font-size: 18px;
+    }
+    .about-promo__descr {
+        font-size: 14px;
+    }
+    .advantages__question-title {
+        font-size: 32px;
+    }
+    .advantages__question-item-title,
+    .advantages__items-title {
+        font-size: 20px;
+    }
+    .advantages__question-item-text p:not(.advantages__question-item-title) {
+        font-size: 18px;
+    }
+    .advantages__question-items li img {
+        height: 45px;
+    }
+    .advantages__items-text {
+        font-size: 16px;
+    }
+    .advantages__items {
+        gap: 25px;
+    }
+    .swiper-office-city, 
+    .swiper-office-city-tyumen {
+        max-width: 550px;
+        margin: 0;
+        height: auto;
+    }
+    .about-office__city {
+        gap: 25px;
+    }
 }
 
-@media (max-width: 1024px) {}
+@media (max-width: 1024px) {
+    .about-office__city {
+        flex-direction: column;
+        gap: 50px;
+    }
+    .about-office__city-info {
+        order: -1;
+    }
+    .swiper-office-city, 
+    .swiper-office-city-tyumen {
+        max-width: none;
+        height: 100%;
+    }
+    .about-office__city-swiper {
+        height: 500px;
+    }
+}
 
 @media (max-width: 992px) {
     .aside__inner .aside__inner-close-btn {
@@ -1428,6 +1488,28 @@
         text-align: center;
         padding: 10px 15px;
     }
+    .advantages__question-title {
+        font-size: 25px;
+    }
+    .advantages__question-item-title,
+    .advantages__items-title {
+        font-size: 16px;
+    }
+    .advantages__question-item-text p:not(.advantages__question-item-title) {
+        font-size: 14px;
+    }
+    .advantages__question-items {
+        flex-wrap: wrap;
+    }
+    .advantages__items li {
+        padding: 15px 20px;
+    }
+    .advantages__items-text {
+        font-size: 14px;
+    }
+    section.about-offices {
+        padding-bottom: 80px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1517,6 +1599,16 @@
     }
     .contacts-form-connect {
         justify-content: center;
+    }
+    .about-promo__descr {
+        margin-top: 15px;
+    }
+    .advantages__items {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .advantages__items li {
+        width: calc(50% - 25px);
     }
 }
 
@@ -1824,6 +1916,24 @@
     .contacts-city__departments-time {
         font-size: 10px;
     }
+    .about-promo__inner {
+        flex-direction: column;
+    }
+    .swiper.swiper-about-promo {
+        max-width: none;
+        height: auto;
+    }
+    .about-promo {
+        padding: 10px 0 50px 0;
+    }
+    .advantages__question-items li {
+        gap: 10px;
+        width: calc(50% - 30px);
+    }
+    .advantages__question-items {
+        justify-content: center;
+        gap: 30px;
+    }
 }
 
 @media (max-width: 620px) {
@@ -1914,6 +2024,19 @@
     .contacts-form-subtext,
     .contacts-form-question {
         margin-top: 10px;
+    }
+    .advantages__question {
+        padding: 30px;
+    }
+    .about-office__tabs {
+        margin-top: 15px;
+    }
+    .about-office__city {
+        padding-top: 20px;
+        gap: 20px;
+    }
+    .about-office__city-swiper {
+        height: auto;
     }
 }
 
@@ -2264,34 +2387,45 @@
         font-size: 14px;
     }
     .rect-btn--contact-tab,
-    .rect-btn--contact-info-tab {
+    .rect-btn--contact-info-tab,
+    .rect-btn--about-office-tab,
+    .rect-btn--city-tab {
         padding: 10px 15px;
     }
     .contacts-city__info-tabs {
         margin-top: 20px;
     }
     .contacts-city__info-half,
-    .contacts-city__info-row {
+    .contacts-city__info-row,
+    .about-office__info-half,
+    .about-office__info-row {
         gap: 15px;
     }
-    .contacts-city__info-row img {
+    .contacts-city__info-row img,
+    .about-office__info-row img {
         width: 16px;
         height: 16px;
     }
     .contacts-city__info-address .city-address,
-    .contacts-city__info-half .contacts-city__info-tel a {
+    .contacts-city__info-half .contacts-city__info-tel a,
+    .about-office__info-address .city-address,
+    .about-office__info-half .about-office__info-tel a {
         font-size: 14px;
     }
-    .contacts-city__info-address a {
+    .contacts-city__info-address a,
+    .about-office__info-address a {
         font-size: 12px;
     }
-    .contacts-city__info-address .city-time {
+    .contacts-city__info-address .city-time,
+    .about-office__info-address .city-time {
         font-size: 12px;
     }
-    .contacts-city__info-address p:not(:first-child) {
+    .contacts-city__info-address p:not(:first-child),
+    .about-office__info-address p:not(:first-child) {
         margin-top: 5px;
     }
-    .contacts-city__info-half .contacts-city__info-tel p {
+    .contacts-city__info-half .contacts-city__info-tel p,
+    .about-office__info-half .about-office__info-tel p {
         font-size: 12px;
     }
     .contacts-city {
@@ -2823,6 +2957,25 @@
         width: 12px;
         height: 9px;
     }
+    .about-promo__tagline,
+    .about-promo__copyright {
+        font-size: 12px;
+    }
+    .about-promo__descr {
+        font-size: 10px;
+    }
+    .advantages__question-text {
+        font-size: 12px;
+    }
+    .advantages__question-title {
+        font-size: 18px;
+    }
+    .advantages__items li {
+        width: 100%;
+    }
+    section.advantages {
+        padding-bottom: 15px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -3133,6 +3286,9 @@
     }
     .complects__item-img img {
         max-height: 250px;
+    }
+    .advantages__question-items li {
+        width: 100%;
     }
 }
 
