--- a/css/actions.css
+++ b/css/actions.css
@@ -9,7 +9,7 @@
 }
 
 .actions__header-link {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
 }
 
@@ -45,4 +45,8 @@
     display: grid;
     gap: 40px;
     grid-template-columns: repeat(auto-fit, minmax(calc(440px - 40px), 1fr));
+}
+
+.actions__footer {
+    margin-top: 30px;
 }
