--- a/css/compare.css
+++ b/css/compare.css
@@ -11,6 +11,7 @@
 
 .rect-btn--compare-category {
     border-radius: 5px;
+    font-size: 16px;
 }
 
 .rect-btn--compare-category.active {
@@ -30,6 +31,7 @@
 .compare__buttons button {
     font-weight: 400;
     border-radius: 5px;
+    font-size: 16px;
 }
 
 .swiper-compare {
@@ -102,7 +104,7 @@
     text-align: center;
     border-radius: 10px;
     border: 1px solid var(--main-blue);
-    min-height: 451px;
+    min-height: 446px;
     justify-content: center;
 }
 
