--- a/css/contacts.css
+++ b/css/contacts.css
@@ -439,7 +439,6 @@
 }
 .contacts-form input[type=tel] {
     width: 100%;
-    margin-top: 20px;
     padding: 15px 25px;
     border-radius: 5px;
     border: 1px solid #eaebed;
@@ -455,7 +454,6 @@
     resize: none;
     padding: 15px 25px;
     font-size: 16px;
-    margin-top: 25px;
 }
 .contacts-form__inner textarea::placeholder {
     font-size: 16px;
@@ -534,4 +532,18 @@
 .contacts-form-label-file svg {
     min-width: 16px;
     min-height: 18px;
+}
+
+#complaintForm label[data-input-required],
+#ceoForm label[data-input-required] {
+    margin-top: 20px;
+}
+
+#complaintForm label[data-input-required] span.require-icon,
+#ceoForm label[data-input-required] span.require-icon {
+    left: 85%;
+}
+#complaintForm label[data-input-required] textarea + span.require-icon,
+#ceoForm label[data-input-required] textarea + span.require-icon {
+    top: 65%;
 }
