--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,7 @@ body.active {
     display: flex;
     gap: 20px;
     margin-left: 30px;
+    font-size: 12px;
 }
 
 .phone-number {
@@ -555,7 +556,7 @@ body.active {
     border-radius: 10px;
     max-height: 440px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: auto;
     background-position: bottom center;
     padding: 35px;
     min-width: 250px;
@@ -573,6 +574,7 @@ body.active {
     border: none;
     padding: 10px;
     margin-top: 15px;
+    font-size: 12px;
 }
 
 .oval-btn--all-categories {
@@ -729,6 +731,10 @@ body.active {
     background: #343538;
 }
 
+.wrapper-cart .header-panel__item.cart-item .round-btn--header {
+    background-color: var(--main-blue);
+}
+
 .round-btn--header img {
     max-width: 20px;
 }
@@ -860,7 +866,7 @@ body.active {
     text-transform: uppercase;
 }
 
-.round-btn--header.auth-btn:hover ~ .auth-popup,
+.round-btn--header.auth-btn:hover~.auth-popup,
 .auth-popup:hover {
     display: block;
 }
@@ -969,7 +975,7 @@ body.active {
     font-weight: 500;
 }
 
-.auth-popup__user-name ~ p {
+.auth-popup__user-name~p {
     font-size: 12px;
     color: #8c8c8c;
 }
@@ -980,12 +986,14 @@ body.active {
     flex-direction: column;
     gap: 10px;
 }
+
 .rect-btn--logged {
     width: 100%;
     text-align: center;
     position: relative;
     padding: 9px 22px;
 }
+
 .rect-btn--logged img {
     position: absolute;
     left: 22px;
@@ -994,18 +1002,22 @@ body.active {
     width: 15px;
     height: 15px;
 }
+
 .auth-popup__discount {
     margin-top: 30px;
     text-align: center;
 }
+
 .auth-popup__discount-value {
     font-weight: 500;
     font-size: 16px;
 }
+
 .auth-popup__discount-link {
-    color:var(--main-blue);
+    color: var(--main-blue);
     font-size: 12px;
 }
+
 .rect-btn--exit {
     margin-top: 16px;
     width: 100%;
@@ -1228,7 +1240,7 @@ body.active {
 }
 
 .bestseller__inner:has(.skeleton) .swiper-button-next,
-.bestseller__inner:has(.skeleton) .swiper-button-prev{
+.bestseller__inner:has(.skeleton) .swiper-button-prev {
     opacity: 0;
 }
 
@@ -1366,6 +1378,7 @@ body.active {
     font-size: 15px;
     font-weight: 300;
     margin-top: 15px;
+    color: var(--subtitle-color);
 }
 
 .popular-card--big {
@@ -1460,7 +1473,7 @@ body.active {
 }
 
 .categories__inner:has(.skeleton) .swiper-button-next,
-.categories__inner:has(.skeleton) .swiper-button-prev{
+.categories__inner:has(.skeleton) .swiper-button-prev {
     opacity: 0;
 }
 
@@ -1576,6 +1589,7 @@ body.active {
 .complects__item-old-price {
     color: #8c8c8c;
     font-weight: 600;
+    text-decoration: line-through;
 }
 
 .complects__item-price {
@@ -1810,7 +1824,7 @@ body.active {
 
 .product-card__name:not(a) {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .product-card__name a {
@@ -1824,7 +1838,7 @@ body.active {
 
 .product-card__article {
     margin-top: 10px;
-    font-size: 11px;
+    font-size: 10px;
     line-height: 1.5;
     color: var(--no-order-color);
 }
@@ -2021,6 +2035,7 @@ body.active {
 .product-card__counter span {
     font-size: inherit;
     line-height: inherit;
+    text-align: center;
 }
 
 .product-card__counter button {
@@ -2231,6 +2246,7 @@ span.brands__item-name {
     font-size: 18px;
     line-height: 1.5;
     font-weight: 500;
+    color: var(--subtitle-color);
 }
 
 .brands__link svg path {
@@ -2272,6 +2288,10 @@ span.brands__item-name {
 /* BRANDS END */
 
 /* VIDEOS START */
+
+section.videos {
+    padding-top: 60px;
+}
 
 .title--videos p {
     max-width: 450px;
@@ -2381,9 +2401,18 @@ span.brands__item-name {
     text-align: center;
 }
 
+.rect-btn--videos {
+    display: none;
+    text-align: center;
+}
+
 /* VIDEOS END */
 
 /* FAQ START */
+
+section.faq {
+    padding-bottom: 60px;
+}
 
 .faq__inner {
     margin-top: 75px;
@@ -2413,12 +2442,11 @@ span.brands__item-name {
     border-width: 0 1px 1px 0;
     display: block;
     padding: 3px;
-    transform: rotate(45deg);
+    transform: rotate(45deg) translateY(-50%);
     position: absolute;
-    top: 15px;
+    top: 50%;
     right: 20px;
     transition: var(--alt-transition);
-    display: none;
 }
 
 .faq__item.active span {
@@ -2426,13 +2454,30 @@ span.brands__item-name {
 }
 
 .faq__item-question {
-    font-size: 18px;
+    position: relative;
+    font-size: 14px;
+    /* width: 100%; */
 }
+
+/* .faq__item-question::before {
+    content: '';
+    border: solid #8c8c8c;
+    border-width: 0 1px 1px 0;
+    display: block;
+    padding: 3px;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 5px;
+    right: 0;
+    transition: var(--alt-transition);
+    display: block;
+} */
 
 .faq__item.active .faq__item-answer {
     overflow: visible;
-    height: 200%;
+    height: auto;
     box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    padding-bottom: 20px;
 }
 
 .faq__item-answer {
@@ -2608,8 +2653,8 @@ a.footer__nav-link--show {
 #citySelect,
 #authRegister,
 #complaintForm,
-#ceoForm,
-#authLogin {
+#authLogin, 
+#ceoForm {
     visibility: hidden;
     opacity: 0;
     transition: var(--alt-transition);
@@ -2814,6 +2859,10 @@ a.footer__nav-link--show {
 
 .product-box__tool * {
     transition: var(--default-transition);
+}
+
+.product-box__tool button {
+    font-size: 14px;
 }
 
 .product-box__brand {
@@ -3072,10 +3121,16 @@ a.footer__nav-link--show {
 
 .option a {
     color: var(--main-blue);
+    font-size: 12px;
+}
+
+.option span {
+    text-transform: uppercase;
 }
 
 .option p {
     color: var(--subtitle-color);
+    font-size: 12px;
 }
 
 .rect-btn--brand {
@@ -3182,11 +3237,9 @@ a.footer__nav-link--show {
     max-height: 165px;
     padding: 15px;
     position: relative;
-    border: none;
     border-radius: 10px;
     font-size: 16px;
     resize: none;
-    margin-top: 30px;
 }
 
 #questionTextArea::placeholder {
@@ -3205,11 +3258,11 @@ a.footer__nav-link--show {
 #questionMailInput {
     padding: 20px 15px;
     width: 100%;
-    margin-top: 12px;
     min-height: 70px;
     font-size: 18px;
     font-weight: 400;
 }
+
 .question-form__checkbox input {
     position: absolute;
     z-index: -1;
@@ -3251,10 +3304,6 @@ a.footer__nav-link--show {
 
 .question-form__checkbox label:has(input:checked)::after {
     opacity: 1;
-}
-
-#questionMailInput {
-    margin-top: 20px;
 }
 
 .question-form__checkbox {
@@ -3555,3 +3604,111 @@ form.auth__form {
 }
 
 /* FANCYBOX END */
+
+input:focus,
+textarea:focus {
+    outline: none;
+}
+
+#questionTextArea:valid {
+    border: 1px solid transparent;
+}
+
+input[required]:invalid,
+textarea[required]:invalid {
+    border: 1px solid #e53935;
+}
+
+label[data-input-required] {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+label[data-input-required]:has(input[required]:invalid) span.require-icon,
+label[data-input-required]:has(textarea[required]:invalid) span.require-icon {
+    display: block;
+}
+
+label[data-input-required] span.require-icon {
+    position: absolute;
+    left: 90%;
+    width: 30px;
+    height: 33px;
+    display: none;
+    background: url('../img/icons/input-invalid.svg') center center/cover no-repeat;
+    cursor: pointer;
+}
+
+label[data-input-required] span.require-icon:hover span.require-icon-hint {
+    display: block;
+
+}
+
+label[data-input-required] span.require-icon-hint {
+    position: absolute;
+    display: none;
+    font-size: 18px;
+    font-weight: 500;
+    box-shadow: 0 0 7px 0 rgba(62, 91, 133, 0.5);
+    border-radius: 10px;
+    background-color: #fff;
+    white-space: nowrap;
+    padding: 14px 12px;
+    top: calc(100% + 12px);
+    left: -18px;
+    z-index: 999;
+}
+
+label[data-input-required] span.require-icon-hint b {
+    font-weight: 500;
+    color: #e53935;
+}
+
+label[data-input-required] span.require-icon-hint:before {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: 100%;
+    left: 25px;
+    border-width: 0 8px 8px 8px;
+    border-style: solid;
+    border-color: #fff transparent;
+}
+
+label[data-input-required] textarea + span.require-icon {
+    top: 75%;
+}
+
+.question-form__user-fields label[data-input-required]:not(:first-child) {
+    margin-top: 20px;
+}
+
+#questionForm input[required]:invalid,
+#questionForm textarea[required]:invalid {
+    border-width: 2px;
+}
+
+#authLogin label[data-input-required],
+#authRegister label[data-input-required],
+.auth label[data-input-required] {
+    display: block;
+}
+
+#authLogin label[data-input-required] span.require-icon,
+#authRegister label[data-input-required] span.require-icon,
+.auth label[data-input-required] span.require-icon {
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    left: calc(100% - 30px);
+}
+
+#authLogin label[data-input-required] span.require-icon-hint,
+#authRegister label[data-input-required] span.require-icon-hint,
+.auth label[data-input-required] span.require-icon-hint {
+    font-size: 14px;
+    padding: 10px 8px;
+    color: var(--text-black-color);
+}
