--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ body.active {
     display: flex;
     gap: 20px;
     margin-left: 30px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .phone-number {
@@ -1768,6 +1768,7 @@ body.active {
     padding: 15px 10px;
     gap: 10px;
     background-color: #fff;
+    border-radius: 0 0 10px 10px;
 }
 
 .product-card__info-box~.product-card__footer-buttons {
@@ -3393,11 +3394,37 @@ a.footer__nav-link--show {
 }
 
 .city-select__city {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     width: 33%;
 }
 
-.city-select__city span {
+.city-select__city.active a::after {
+    content: '';
+    position: absolute;
+    left: -35px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: url('../img/icons/check.svg') center center/cover no-repeat;
+    width: 10px;
+    height: 8px;
+    display: none;
+}
+
+.city-select__city.active a::after {
+    display: block;
+}
+
+.city-select__city.active a {
+    font-weight: 500;
+    color: var(--main-blue);
+}
+
+.city-select__city a {
+    position: relative;
     font-size: 16px;
     line-height: 1.5;
 }
