--- a/css/media.css
+++ b/css/media.css
@@ -1527,6 +1527,9 @@
     .filter-title svg path {
         fill: #fff;
     }
+    .product-box__tool:hover button {
+        color: var(--text-black-color);
+    }
 }
 
 @media (max-width: 820px) {
